--- a/Kandigram_Beta/ios/Kandigram_Beta/Info.plist
+++ b/Kandigram_Beta/ios/Kandigram_Beta/Info.plist
@@ -53,5 +53,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Monofett.ttf</string>
+		<string>Ubuntu Condensed.ttf</string>
+		<string>Ubuntu-Bold.ttf</string>
+		<string>Ubuntu-BoldItalic.ttf</string>
+		<string>Ubuntu-Light.ttf</string>
+		<string>Ubuntu-LightItalic.ttf</string>
+		<string>Ubuntu-Medium.ttf</string>
+		<string>Ubuntu-MediumItalic.ttf</string>
+		<string>Ubuntu.ttf</string>
+		<string>UbuntuCondensed-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
