--- a/Kandigram_Beta/package.json
+++ b/Kandigram_Beta/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-device-info": "^5.4.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-spinkit": "^1.5.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
