--- a/Kandigram_Beta/package.json
+++ b/Kandigram_Beta/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/netinfo": "^5.2.0",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-device-info": "^5.4.0",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.22",
