--- a/Kandigram_Beta/ios/Podfile
+++ b/Kandigram_Beta/ios/Podfile
@@ -34,13 +34,14 @@ target 'Kandigram_Beta' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   # pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-  
+  pod 'QBImagePickerController', :path => '../node_modules/react-native-image-crop-picker/ios/QBImagePicker/QBImagePickerController.podspec'
 #  pod 'GoogleSignIn', '~> 5.0.2'
   pod 'Firebase/Analytics'
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
   pod 'Firebase/Messaging'
+  pod 'Firebase/Storage'
   
 
   target 'Kandigram_BetaTests' do
