--- a/Kandigram_Beta/package.json
+++ b/Kandigram_Beta/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "yarn pod": "cd ios && pod install && cd ..",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "react-native-fbsdk": "^1.1.1",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-image-crop-picker": "^0.26.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.0",
@@ -26,6 +28,7 @@
     "react-native-spinkit": "^1.5.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
