--- a/Kandigram_Beta/android/app/build.gradle
+++ b/Kandigram_Beta/android/app/build.gradle
@@ -186,7 +186,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
-    compile project(path: ':react-native-firebase')
+    implementation project(path: ':react-native-firebase')
+    implementation project(':react-native-gesture-handler')
 
     // implementation(project(":react-native-google-signin"))
 
