--- a/Kandigram_Beta/android/app/build.gradle
+++ b/Kandigram_Beta/android/app/build.gradle
@@ -184,7 +184,9 @@ dependencies {
     implementation "com.google.firebase:firebase-database:19.2.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+   // implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation project(path: ':react-native-firebase')
     implementation project(':react-native-gesture-handler')
@@ -209,4 +211,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 //apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
 //applyNativeModulesAppBuildGradle(project)
+
 apply plugin: 'com.google.gms.google-services'
