--- a/Kandigram_Beta/ios/Kandigram_Beta/Info.plist
+++ b/Kandigram_Beta/ios/Kandigram_Beta/Info.plist
@@ -25,6 +25,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ubuntu-Medium.ttf</string>
+		<string>Ubuntu-Bold.ttf</string>
 	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
