--- a/Kandigram_Beta/package.json
+++ b/Kandigram_Beta/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-calendars": "^1.224.0",
     "react-native-device-info": "^5.4.0",
     "react-native-fbsdk": "^1.1.1",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-crop-picker": "^0.26.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-responsive-screen": "^1.3.0",
@@ -73,7 +75,6 @@
   "rnpm": {
     "assets": [
       "./assets/fonts/"
-      
     ]
   }
 }
