--- a/Kandigram_Beta/android/app/src/main/AndroidManifest.xml
+++ b/Kandigram_Beta/android/app/src/main/AndroidManifest.xml
@@ -1,25 +1,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.kandigram_beta">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.kandigram_beta">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-      android:name=".MainApplication"
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="androidx"
+        android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+        >
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intfent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb519499225580714"/>
