--- a/Kandigram_Beta/package.json
+++ b/Kandigram_Beta/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "yarn pod": "cd ios && pod install && cd ..",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
@@ -17,6 +18,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-calendars": "^1.224.0",
+    "react-native-camera-kit": "^8.0.4",
     "react-native-device-info": "^5.4.0",
     "react-native-fbsdk": "^1.1.1",
     "react-native-firebase": "^5.6.0",
