--- a/Kandigram_Beta/android/app/build.gradle
+++ b/Kandigram_Beta/android/app/build.gradle
@@ -185,8 +185,9 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation "com.google.firebase:firebase-database:19.2.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:0.61.5"  // From node_modules
-   // implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.google.firebase:firebase-messaging:+"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     implementation 'com.android.support:multidex:1.0.3'
@@ -196,8 +197,7 @@ dependencies {
     implementation project(path: ':react-native-firebase')
     implementation project(':react-native-gesture-handler')
 
-   // implementation project(":rncamerakit")
-    // implementation(project(":react-native-google-signin"))
+
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
