--- a/Kandigram_Beta/android/app/src/main/AndroidManifest.xml
+++ b/Kandigram_Beta/android/app/src/main/AndroidManifest.xml
@@ -6,9 +6,12 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         tools:replace="android:appComponentFactory"
+
         android:appComponentFactory="androidx"
         android:name=".MainApplication"
       android:label="@string/app_name"
@@ -20,6 +23,7 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+          android:launchMode="singleTop"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
@@ -31,6 +35,35 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb519499225580714"/>
+
+
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+       See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/common_full_open_on_phone" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/notificationColor" />
+
+        <meta-data
+
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id"/>
+
+        <receiver android:name="io.invertase.firebase.notifications.RNFirebaseNotificationReceiver"/>
+        <receiver android:enabled="true" android:exported="true"  android:name="io.invertase.firebase.notifications.RNFirebaseNotificationsRebootReceiver">
+            <intent-filter>
+
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+                <category android:name="android.intent.category.DEFAULT" />
+
+            </intent-filter>
+        </receiver>
 
     </application>
 
